[gd_scene load_steps=3 format=3 uid="uid://bhhk5a5p2gmn7"]

[ext_resource type="PackedScene" uid="uid://cxkuc0nsd4an8" path="res://button/text_case_button.tscn" id="1_iuvf1"]
[ext_resource type="Script" path="res://value/scripts/line_value.gd" id="1_smroq"]

[node name="LineValue" type="HBoxContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_smroq")

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextCaseButton" parent="." instance=ExtResource("1_iuvf1")]
layout_mode = 2
size_flags_horizontal = 8

[connection signal="text_changed" from="LineEdit" to="." method="_on_text_changed"]
[connection signal="case_changed" from="TextCaseButton" to="." method="_on_case_changed"]
